--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         
         <div class="footer-bottom">
             <p>&copy; 2025 Shashank Shekhar Barnwal. All Rights Reserved.</p>
-            <p>Designed with <i class="fas fa-heart"></i> by Shashank</p>
+            <!--        <p>Designed with <i class="fas fa-heart"></i> by Shashank</p>    -->
         </div>
     </div>
 </footer>
